--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css"
   rel="stylesheet"
 />
+<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
 <link rel="icon" href="https://res.cloudinary.com/dwr8472qb/image/upload/v1735915053/9d7324_c25a53679635448385174ff482b36f22_mv2_vxtj83.avif">
 </head>
 <body>
